--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
       href="https://fonts.googleapis.com/css?family=New+Rocker|Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/6de492cf9a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React App</title>
   </head>
   <body>
